# rurel

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: dqn.rs  lib.rs
src/examples/: eucdist.rs  eucdist_dqn.rs  save_load.rs  weightedcoin.rs
src/mdp/: mod.rs
src/strategy/: mod.rs
src/strategy/explore/: mod.rs  random.rs
src/strategy/learn/: mod.rs  q.rs
src/strategy/terminate/: fixed_iterations.rs  mod.rs  sink_states.rs
