[package]
name = "rurel"
version = "0.3.0"
authors = ["Milan Boers <mail@milanboers.nl>"]
description = "Flexible, reusable reinforcement learning (Q learning) implementation"
documentation = "https://docs.rs/rurel"
homepage = "https://github.com/milanboers/rurel"
repository = "https://github.com/milanboers/rurel"
readme = "README.md"
keywords = ["reinforcement", "q", "learning"]
categories = ["science", "algorithms"]
license = "MPL-2.0"
edition = "2021"

[badges]
travis-ci = { repository = "milanboers/rurel", branch = "master" }

[dependencies]
rand = "0.8"

[[example]]
name = "eucdist"
path = "src/examples/eucdist.rs"
